[FLINK-2904] [web-dashboard] Fix truncation of task counts when the number is large.
This closes #1321

--- a/flink-runtime-web/web-dashboard/app/styles/job.styl
+++ b/flink-runtime-web/web-dashboard/app/styles/job.styl
@@ -34,9 +34,8 @@
 .label-group
   .label
     display: inline-block
-    width: 2em
-    padding-left: 0.1em
-    padding-right: 0.1em
+    padding-left: 0.4em
+    padding-right: 0.4em
     margin: 0
     border-right: 1px solid #ffffff
     border-radius(0)
